# content-extractor-rl

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md
crates/article-extractor/: Cargo.toml
crates/article-extractor-cli/: Cargo.toml
crates/article-extractor-cli/src/: main.rs
crates/article-extractor-py/: Cargo.toml  README.md  pyproject.toml
crates/article-extractor-py/.cargo/: config.toml
crates/article-extractor-py/python/article_extractor/: __init__.py
crates/article-extractor-py/src/: lib.rs
crates/article-extractor-py/tests/: conftest.py  requirements.txt  test_extractor.py  test_performance.py
crates/article-extractor/benches/: concurrency_benchmark.rs  extraction_benchmark.rs  memory_benchmark.rs
crates/article-extractor/src/: agent.rs  baseline_extractor.rs  checkpoint.rs  cli_utils.rs  config.rs  curriculum.rs  device.rs  environment.rs  evaluation.rs  html_parser.rs  hyperparameter.rs  hyperparameter_tuner.rs  lib.rs  mlflow.rs  models.rs  onnx_export.rs  plotting.rs  replay_buffer.rs  reward.rs  site_profile.rs  text_utils.rs  training.rs
crates/article-extractor/src/agents/: dqn_agent.rs  mod.rs  ppo_agent.rs  sac_agent.rs
crates/article-extractor/src/evaluation/: algorithm_comparison.rs  ground_truth.rs  mod.rs
crates/article-extractor/tests/: algorithm_save_load_tests.rs  integration_tests.rs  model_integration_tests.rs  ppo_shape_test.rs
crates/article-extractor/tests/fixtures/: large_article.html
crates/content-extractor-rl/: Cargo.toml
crates/content-extractor-rl-cli/: Cargo.toml
crates/content-extractor-rl-cli/src/: main.rs
crates/content-extractor-rl-py/: Cargo.toml  README.md  pyproject.toml
crates/content-extractor-rl-py/.cargo/: config.toml
crates/content-extractor-rl-py/python/content_extractor_rl/: __init__.py
crates/content-extractor-rl-py/src/: lib.rs
crates/content-extractor-rl-py/tests/: test_extractor.py  test_performance.py
crates/content-extractor-rl/benches/: concurrency_benchmark.rs  extraction_benchmark.rs  memory_benchmark.rs
crates/content-extractor-rl/src/: baseline_extractor.rs  checkpoint.rs  cli_utils.rs  config.rs  curriculum.rs  device.rs  environment.rs  html_parser.rs  hyperparameter.rs  hyperparameter_tuner.rs  lib.rs  mlflow.rs  models.rs  plotting.rs  replay_buffer.rs  reward.rs  site_profile.rs  text_utils.rs  training.rs
crates/content-extractor-rl/src/agents/: dqn_agent.rs  mod.rs  ppo_agent.rs  sac_agent.rs
crates/content-extractor-rl/src/evaluation/: algorithm_comparison.rs  ground_truth.rs  mod.rs
crates/content-extractor-rl/tests/: algorithm_save_load_tests.rs  integration_tests.rs  model_integration_tests.rs  ppo_shape_test.rs  sac_agent_tests.rs
examples/: complete_workflow.py  production_extraction.py
scripts/: build_all.sh  generate_benchmark_report.py  install_python.sh  run_benchmarks.sh  test_all.sh
src/: lib.rs
