# Workspace Cargo.toml (root)

[workspace]
members = [
    "crates/article-extractor",
    "crates/article-extractor-cli",
    "crates/article-extractor-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
candle-core = { version = "0.9.2-alpha.2", features = ["cuda"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["cuda"] }
ndarray = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
anyhow = "1.0.100"

# HTML parsing
scraper = "0.25.0"
html5ever = "0.36.1"

# Utilities
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.11.0-rc.3"
rayon = "1.11.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
plotters = "0.3.7"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.27.2", features = ["extension-module"] }

# Compression
bzip2 = "0.6.1"

# Additional distributions
rand = { version = "0.10.0-rc.5", features = ["small_rng"] }
rand_distr = "0.6.0-rc.0"

# ============================================================================
# Build Instructions
# ============================================================================

# Build all with CUDA and MLflow support:
# cargo build --release --features cuda,mlflow

# Build CLI only:
# cd crates/article-extractor-cli
# cargo build --release --features cuda,mlflow

# Build Python package:
# cd crates/article-extractor-py
# maturin develop --release --features cuda

# Run tests:
# cargo test --all --features cuda

# Run benchmarks:
# cargo bench --features cuda