# Workspace Cargo.toml (root)

[workspace]
members = [
    "crates/content-extractor-rl",
    "crates/content-extractor-rl-cli",
    "crates/content-extractor-rl-py",
]
resolver = "2"

[workspace.package]
description = "RL-based article extraction from HTML using Deep Q-Networks and heuristic fallback"
version = "0.1.2"
authors = ["Sandeep Singh Sandhu <sandeep.sandhu@gmx.com>"]
repository = "https://github.com/sandeepsandhu/content-extractor-rl"
homepage = "https://github.com/sandeepsandhu/content-extractor-rl"
documentation = "https://docs.rs/content-extractor-rl"
edition = "2021"
rust-version = "1.74.0"
license = "MIT OR Apache-2.0"
keywords = ["article", "extraction", "html", "reinforcement", "nlp"]
categories = ["text-processing", "web-programming", "science"]
readme = "README.md"

[workspace.dependencies]
# Core dependencies
candle-core = "0.9.2"
candle-nn = "0.9.2"
ndarray = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
anyhow = "1.0.100"
safetensors = "0.7.0"

# HTML parsing
scraper = "0.25.0"
html5ever = "0.36.1"
lazy_static = "1.5.0"

# Utilities
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10"
rayon = "1.11.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "local-time"] }
plotters = "0.3.7"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.27.2", features = ["extension-module"] }

# Compression
bzip2 = "0.6.1"

# Additional distributions
rand = "0.10"
rand_distr = "0.6.0"


# ============================================================================
# Build Instructions
# ============================================================================

# Build all with CUDA and MLflow support:
# cargo build --release --features cuda,mlflow

# Build CLI only:
# cd crates/content-extractor-rl-cli
# cargo build --release --features cuda,mlflow

# Build Python package:
# cd crates/content-extractor-rl-py
# maturin develop --release --features cuda

# Run tests:
# cargo test --all --features cuda

# Run benchmarks:
# cargo bench --features cuda