[package]
name = "article-extractor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "article-extractor"
path = "src/main.rs"

[dependencies]
article-extractor = { path = "../article-extractor" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio = { version = "1.36", features = ["full"] }
# Add to dependencies section
walkdir = "2.4"
chrono = "0.4"
