# crates/article-extractor-cli/Cargo.toml

[package]
name = "article-extractor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "article-extractor"
path = "src/main.rs"

[dependencies]
article-extractor = { path = "../article-extractor", default-features = false }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.5"
chrono = "0.4"
indicatif = "0.18.3"
bzip2 = "0.6.1"
rand = "0.9.2"

[features]
default = []
cuda = ["article-extractor/cuda"]
mlflow = ["article-extractor/mlflow-rs"]
