# crates/article-extractor-py/Cargo.toml

[package]
name = "article-extractor-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "article_extractor_rs"
crate-type = ["cdylib"]

[dependencies]
article-extractor = { path = "../article-extractor", default-features = false }
pyo3.workspace = true
serde_json.workspace = true
anyhow.workspace = true
url = "2.5.7"

[build-dependencies]
pyo3-build-config = "0.21"

[features]
default = []
cuda = ["article-extractor/cuda"]
