[package]
name = "article-extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
scraper.workspace = true
html5ever.workspace = true
regex.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true
tract-onnx = { version = "0.21", optional = true }
tract-core = { version = "0.21", optional = true }

# Additional dependencies
url = "2.5"
lazy_static = "1.4"
indicatif = "0.18.3"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }

[features]
default = []
onnx = ["tract-onnx", "tract-core"]
