# crates/article-extractor/Cargo.toml

[package]
name = "article-extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
scraper.workspace = true
html5ever.workspace = true
regex.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true
plotters.workspace = true
tract-onnx = { version = "0.22.0", optional = true }
tract-core = { version = "0.22.0", optional = true }

# Additional dependencies
url = "2.5.7"
lazy_static = "1.5.0"
indicatif = "0.18.3"
selectors = "0.33.0"
bzip2.workspace = true
rand_distr.workspace = true

# Optional MLflow support
trs-mlflow = { version = "0.6.7", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
futures = { version = "0.3.31", optional = true }  # Made optional

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.23.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mlflow-rs = ["trs-mlflow", "tokio", "futures"]  # Added tokio and futures here

[[bench]]
name = "extraction_benchmark"
harness = false

[[bench]]
name = "concurrency_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false