# crates/content-extractor-rl-cli/Cargo.toml

[package]
name = "content-extractor-rl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "content-extractor-rl"
path = "src/main.rs"

[dependencies]
content-extractor-rl = { path = "../content-extractor-rl", version = "0.1.0", default-features = false }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.5"
indicatif = "0.18.3"
bzip2 = "0.6.1"
rand = "0.10.0-rc.5"
tracing-appender = "0.2.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11.0"
algorithm = "0.1.18"

[features]
default = []
cuda = ["content-extractor-rl/cuda"]
mlflow = ["content-extractor-rl/mlflow-rs"]
