[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "content-extractor-rl"
version = "0.1.2"
author = "Sandeep Singh Sandhu"
author_email = "sandeep.sandhu@gmx.com"
description = "News article extraction library that uses reinforcement learning to extract relevant content from HTML"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["article", "extraction", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/sandeepsandhu/content-extractor-rl"

[tool.maturin]
features = ["pyo3/extension-module"]

