# crates/content-extractor-rl/Cargo.toml

[package]
name = "content-extractor-rl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
scraper.workspace = true
html5ever.workspace = true
regex.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true
plotters.workspace = true
tract-onnx = { version = "0.22.0", optional = true }
tract-core = { version = "0.22.0", optional = true }
lazy_static.workspace = true
bzip2.workspace = true
rand_distr.workspace = true

# Additional dependencies
url = "2.5.8"
indicatif = "0.18.4"
selectors = "0.36.1"
tempfile = "3.27.0"

# Optional MLflow support
trs-mlflow = { version = "0.6.7", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
futures = { version = "0.3.31", optional = true }
walkdir = "2.5.0"  # Made optional

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mlflow-rs = ["trs-mlflow", "tokio", "futures"]  # Added tokio and futures here

[[bench]]
name = "extraction_benchmark"
harness = false

[[bench]]
name = "concurrency_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[lib]
name = "content_extractor_rl"
path = "src/lib.rs"
